--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "include/stb"]
 	path = include/stb
 	url = https://github.com/nothings/stb.git
+[submodule "include/imgui"]
+	path = include/imgui
+	url = https://github.com/20k/imgui-fork
+	branch = subpixel-font
