beginning of battle map

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "include/ndb"]
 	path = include/ndb
 	url = https://github.com/20k/ndb
+[submodule "include/entt"]
+	path = include/entt
+	url = https://github.com/skypjack/entt
