--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,19 @@ project.fragment.lock.json
 artifacts/
 **/Properties/launchSettings.json
 
+# Binaries
+**/bin/
+!premake/
+bin-int/
+builds/*
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+
 *_i.c
 *_p.c
 *_i.h
