- Round 2 at cicd

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "include/entt"]
 	path = include/entt
 	url = https://github.com/skypjack/entt
+[submodule "include/vcpkg"]
+	path = include/vcpkg
+	url = https://github.com/microsoft/vcpkg
