--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: DwarfAndBlade Build
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -13,7 +13,16 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        include:
+          - os: windows-latest
+            vcpkg-response-file: vcpkg_x64-windows.txt
+          - os: ubuntu-latest
+            vcpkg-response-file: vcpkg_x64-linux.txt
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,7 +35,7 @@ jobs:
     - name: Cache vcpkg's artifacts
       uses: actions/cache@v1
       with:
-        path: ${{ github.workspace }}/vcpkg/
+        path: ${{ github.workspace }}/include/vcpkg/
         # The key will be different each time a different version of vcpkg is used, or different ports are installed.
         key: ${{ hashFiles( env.vcpkgResponseFile ) }}-${{ hashFiles('.git/modules/vcpkg/HEAD') }}-${{ runner.os }}
 
@@ -39,4 +48,4 @@ jobs:
        # Response file stored in source control, it provides the list of ports and triplet(s).
         vcpkgArguments: '@${{ env.vcpkgResponseFile }}'
        # Location of the vcpkg as submodule of the repository.
-        vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+        vcpkgDirectory: '${{ github.workspace }}/include/vcpkg'
