--- a/.github/workflows/windows-gcc.yml
+++ b/.github/workflows/windows-gcc.yml
@@ -20,7 +20,7 @@ jobs:
         os: [windows-latest]
         include:
           - os: windows-latest
-            vcpkg-response-file: vcpkg_x64-windows.txt
+            msys2-response-file: msys2_x64_windows.txt
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,3 +29,30 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+
+    - name: build action
+      shell: bash
+      run: |
+        npm ci
+        npm run build
+        rm -rf node_modules
+
+    # Add Msys2 and aquire packages
+    - name: Add Msys2
+    - uses: numworks/setup-msys2@v1
+      with: 
+        update: true
+        msystem: MSYS
+    - shell: msys2
+    - run: |
+        pacman -Sy mingw64/mingw-w64-x86_64-gcc
+        pacman -Sy msys/gcc
+        pacman -Sy mingw64/mingw-w64-x86_64-glfw
+
+    #test gcc works
+    - run: msys2do gcc 
+
+    #test make works
+    - run: msys2do make
+
+    
