--- a/.github/workflows/windows-gcc.yml
+++ b/.github/workflows/windows-gcc.yml
@@ -18,9 +18,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
-        include:
-          - os: windows-latest
-            msys2-response-file: msys2_x64_windows.txt
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,8 +28,7 @@ jobs:
         submodules: 'recursive'
 
     - name: build action
-    - shell: bash
-    - run: |
+      run: |
         npm ci
         npm run build
         rm -rf node_modules
@@ -43,8 +39,9 @@ jobs:
       with: 
         update: true
         msystem: MSYS
+
     - shell: msys2
-    - run: |
+      run: |
         pacman -Sy mingw64/mingw-w64-x86_64-gcc
         pacman -Sy msys/gcc
         pacman -Sy mingw64/mingw-w64-x86_64-glfw
