--- a/.github/workflows/windows-gcc.yml
+++ b/.github/workflows/windows-gcc.yml
@@ -33,19 +33,18 @@ jobs:
       with: 
         update: true
 
-    - name: (Windows-GCC) Get Deps
-      run: msys2do pacman --noconfirm -Syu mingw64/mingw-w64-x86_64-gcc
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-glfw
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-sfml
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-gdb
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-glew
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-glm
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-make
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-nlohmann-json
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-boost
-      run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-lmdb
-      #run: msys2do pacman --noconfirm -Syu msys/gcc
-      #run: msys2do pacman --noconfirm -Syu msys/make
+    -run: msys2do pacman --noconfirm -Syu mingw64/mingw-w64-x86_64-gcc
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-glfw
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-sfml
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-gdb
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-glew
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-glm
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-make
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-nlohmann-json
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-boost
+    -run: msys2do pacman --noconfirm -Sy mingw64/mingw-w64-x86_64-lmdb
+    #run: msys2do pacman --noconfirm -Syu msys/gcc
+    #run: msys2do pacman --noconfirm -Syu msys/make
 
     #Build project file
     - name: (Windows-GCC) Generate make file 
