--- a/.github/workflows/windows-msvc.yml
+++ b/.github/workflows/windows-msvc.yml
@@ -6,7 +6,7 @@ name: DwarfAndBlade MSVC Build
 # events but only for the master branch
 on:
   push:
-    branches: [ CI-release-branch ]
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
